# harnetics

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  README_EN.md  README_zh.md  docker-compose-local.yml  docker-compose.yml  pyproject.toml
.github/: AGENTS.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflows/: AGENTS.md  ci.yml  desktop-release.yml
.specify/: feature.json
desktop/: AGENTS.md  package-lock.json  package.json  tsconfig.json
desktop/pyinstaller/: AGENTS.md  harnetics-server.spec
desktop/scripts/: AGENTS.md  fix-macos-dmg.mjs
desktop/src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: AGENTS.md  icon.icns
desktop/src-tauri/src/: main.rs
docs/: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  FRONTEND.md  MEMORY.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  THIRD_PARTY_NOTICES.md
docs/bank/: architecture.md  playbook.md  prd.md
docs/daily/: 2026-04-11.md  2026-04-12.md  2026-05-04.md
docs/design-docs/: AGENTS.md  aerospace-mvp-v3.md  core-beliefs.md  index.md
docs/design-docs/prototype/: draft_show.html  graph.html  impact.html  index.html
docs/exec-plans/: AGENTS.md  tech-debt-tracker.md
docs/exec-plans/active/: 2026-04-06-v1-minimal-deliverable-loop-implementation-plan.md  (+1 more)
docs/product-specs/: AGENTS.md  index.md  mvp-prd.md  new-user-onboarding.md
docs/references/: AGENTS.md  design-system-reference-llms.txt  nixpacks-llms.txt  uv-llms.txt
docs/wiki/: API-Reference.md  Architecture-Overview.md  Contributor-Guide.md  Glossary-and-Use-Cases.md  Home.md  Quick-Start.md  README.md  _Sidebar.md
fixtures/: AGENTS.md
fixtures/design/: AGENTS.md
fixtures/evaluator-test/: README.md
fixtures/format-test/: AGENTS.md  FMT-CSV-001.csv  FMT-DOCX-001.docx  FMT-MD-001.md  FMT-XLSX-001.xlsx  FMT-YAML-001.yaml
fixtures/icd/: AGENTS.md  DOC-ICD-001.yaml
fixtures/quality/: AGENTS.md  DOC-QAP-001.md
fixtures/requirements/: AGENTS.md  DOC-SYS-001.md
fixtures/samples/: DOC-DES-001.md  DOC-FMA-001.md  DOC-OVR-001.md  DOC-TPL-001.md
fixtures/templates/: AGENTS.md
fixtures/test_plans/: AGENTS.md  DOC-TST-001.md  DOC-TST-002.md  DOC-TST-003.md
frontend/: AGENTS.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: AGENTS.md  App.tsx  index.css
specs/: AGENTS.md
specs/001-aerospace-doc-alignment/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/003-llm-impact-hardening/: AGENTS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-ai-vector-impact-draft/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-openai-compatible-llm-client/: AGENTS.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-draft-workbench-enhancement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/harnetics/: AGENTS.md  __init__.py  app.py  config.py  drafts.py  importer.py  llm.py  release_notes.py  repository.py  retrieval.py  validation.py
tests/: AGENTS.md  conftest.py  test_app.py  test_catalog_routes.py  test_comparison_4step.py  test_desktop_runtime.py  test_desktop_tauri_config.py  test_developer_logs.py  test_draft_generator.py  test_drafts.py  test_e2e_mvp_scenario.py  test_env_routing.py  test_evaluators.py  test_graph_store.py  test_importer.py  test_llm_client.py  test_release_notes.py  test_repository.py  test_retrieval.py  test_spa_assets.py
(+134 files in other folders)
