[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "harnetics"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.12",
  "python-frontmatter>=1.1.0",
  "PyYAML>=6.0.2",
  "httpx>=0.28.1",
  "uvicorn>=0.35.0",
]

[project.scripts]
pytest = "harnetics:pytest_main"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
