[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harnetics"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.12",
  "python-frontmatter>=1.1.0",
  "PyYAML>=6.0.2",
  "httpx>=0.28.1",
  "uvicorn>=0.35.0",
  "chromadb>=0.6.0",
  "sentence-transformers>=3.4.0",
  "python-dotenv>=1.0.0",
  "typer>=0.15.0",
  "rich>=13.9.0",
  "openai>=1.5.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-s"

[tool.hatch.build.targets.wheel]
packages = ["src/harnetics"]
