[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harnetics"
version = "0.1.0"
description = "商业航天文档对齐工作台——基于文档图谱与大语言模型（LLM），实现跨部门追溯、草稿生成与变更影响分析。"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
  { name = "Sam", email = "huangshan226@foxmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Text Processing :: Markup",
]
dependencies = [
  "fastapi>=0.116.0",
  "python-frontmatter>=1.1.0",
  "PyYAML>=6.0.2",
  "httpx>=0.28.1",
  "uvicorn>=0.35.0",
  "chromadb>=0.6.0",
  "sentence-transformers>=3.4.0",
  "python-dotenv>=1.0.0",
  "typer>=0.15.0",
  "rich>=13.9.0",
  "openai>=1.5.0",
  "python-multipart>=0.0.26",
  "python-docx>=1.0.0",
  "openpyxl>=3.1.0",
  "pypdf>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/harnetics/harnetics"
Documentation = "https://github.com/harnetics/harnetics#readme"
ChineseDocs = "https://github.com/harnetics/harnetics/blob/main/README.md"
EnglishDocs = "https://github.com/harnetics/harnetics/blob/main/README_EN.md"
Repository = "https://github.com/harnetics/harnetics"
Issues = "https://github.com/harnetics/harnetics/issues"
Changelog = "https://github.com/harnetics/harnetics/blob/main/docs/CHANGELOG.md"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-s"

[tool.hatch.build.targets.wheel]
packages = ["src/harnetics"]
