[package]
name = "harnetics-desktop"
version = "0.2.0"
description = "Harnetics desktop shell"
authors = ["Sam"]
license = "Apache-2.0"
repository = "https://github.com/harnetics/harnetics"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
portpicker = "0.1.1"
tauri = { version = "2.5.0", features = [] }
ureq = "2.10.1"
url = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
